Fix navbar on mobile

--- a/style.css
+++ b/style.css
@@ -50,7 +50,7 @@ ul {
 /* Header ------------------------------------------------------------------- */
 
 header {
-  padding-top: 100px;
+  padding-top: 40px;
 }
 
 header h1, header p {
